--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <h1>Home Page</h1>
 <h2>WordCount</h2>
-<form action="{% url 'counts' %}">
+<form action="{% url 'count' %}">
     <textarea rows="10" cols="80" name="fulltext"></textarea>
     <br>
     <input type="submit" value="Count!"/>
