--- a/templates/count.html
+++ b/templates/count.html
@@ -1,4 +1,5 @@
 <h1>COUNT</h1>
+<a href={% url 'homepage' %}>Start again</a>
 <h2>Text : {{text}}</h2>
 <p>No of words in TEXT is : {{len}}</p>
 <p>Occurence of words</p>
