--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 <h1>Home Page</h1>
+<a href={% url 'about' %}>About Us</a>
 <h2>WordCount</h2>
 <form action="{% url 'count' %}">
     <textarea rows="10" cols="80" name="fulltext"></textarea>
